--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
             <div class="time-label">Секунд</div>
         </div>
     </div>
+    <p id="click">Кликните в любом месте или нажмите любую клавишу, чтобы включить звук</p>
 </div>
 <script src="/node_modules/magic-snowflakes/dist/snowflakes.min.js"></script>
 <script src="/node_modules/hrenpack-theme-style/script.js"></script>
-<script src="/node_modules/hrenpack-theme-style/snow.js" data-count="400"></script>
+<script src="/node_modules/hrenpack-theme-style/snow.js" data-count="400" data-no-optimize></script>
+<script src="/config.js"></script>
 <script src="/sound.js"></script>
 <script src="/script.js"></script>
 </body>
