--- a/index.html
+++ b/index.html
@@ -18,15 +18,21 @@
             <div class="time-label">Дней</div>
         </div>
 
+        <div class="timer-separator">:</div>
+
         <div class="timer-box">
             <div class="time-value" id="hours">00</div>
             <div class="time-label">Часов</div>
         </div>
 
+        <div class="timer-separator">:</div>
+
         <div class="timer-box">
             <div class="time-value" id="minutes">00</div>
             <div class="time-label">Минут</div>
         </div>
+
+        <div class="timer-separator">:</div>
 
         <div class="timer-box">
             <div class="time-value" id="seconds">00</div>
